@@ -7084,6 +7084,12 @@ a.tt_f2:hover span.middle {
   max-height: 300px;
   overflow: hidden
 }
+.member {
+  border: 2px inset #878261;
+  color: var(--black-color);
+  padding: 4px 4px 4px 22px;
+  width: 230px
+}
 option.head {
   text-align: center;
   font-weight: 700;
@@ -7100,13 +7106,9 @@ ul.makeMenu ul {
   background: url(../../images/forums/search.png) 4px 4px no-repeat #fefef4;
   border: 2px inset #878261;
   color: var(--black-color);
-  padding: 4px 4px 4px 22px
+  padding: 4px 4px 4px 27px
 }
 .member {
-  border: 2px inset #878261;
-  color: var(--black-color);
-  padding: 4px 4px 4px 22px;
-  width: 230px;
   background: url(../../images/forums/member.png) 4px 4px no-repeat #fefef4;
   height: 18px
 }
