@@ -8202,7 +8202,7 @@ ul.makeMenu ul {
     background: url(../../images/forums/search.png) 4px 4px no-repeat #fefef4;
     border: 2px inset #878261;
     color: var(--black-color);
-    padding: 4px 4px 4px 22px;
+    padding: 4px 4px 4px 27px;
 }
 
 .member {
