@@ -1,3 +1,6 @@
+22 Oct 2017
+fix: admin/backup.php checkboxes
+
 21 Oct 2017
 fix: browse.php checkbox selection
 change: vip to include, not include and only in search results
